--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "braces": "^3.0.2",
     "ejs": "^2.6.2",
     "hexo": "^3.9.0",
     "hexo-cli": "^1.1.0",
