--- a/themes/cafe/_config.yml
+++ b/themes/cafe/_config.yml
@@ -1,15 +1,15 @@
 # 头部导航 Header
 menu:
-  首页: /
-  归档: /archives
-  关于: /about
+  首頁: /
+  文章列表: /archives
+  # 关于: /about
 rss: /atom.xml
 
 # footer底部显示联系邮箱（在博客配置文件下添加email配置也是一样的效果）
-email: 'youemail@outlook.com'
+# email: 'youemail@outlook.com'
 
 # 内容 Content
-excerpt_link: 继续阅读全文 »
+excerpt_link: 繼續閱讀全文 »
 fancybox: true
 
 # 启用social widgets时有效
@@ -29,8 +29,8 @@ wechat_url: http://blog.giscafer.com/static/images/qrcode_giscafer.jpg ## 启用
 # Friendly links 友情链接
 links:
   FB粉專: https://www.facebook.com/allem40306codeblog/
-  Chess Guo: https://blog.chesskuo.tk/
-  HalloWorld: https://halloworld.tw/
+  Chess Guo: https://blog.chesskuo.tw/
+  HalloWorld(暫時連不上): https://halloworld.tw/
   ICE JJ: https://blog.kiyohime.tw/about/
   r0ybloog: https://blog.roy4801.tw/
   SunTalk: https://blog.suntalk.tw/
@@ -124,7 +124,7 @@ gitment:
   client_secret: 97f37d5c27c4a511xx4fxx623d391c85cb97f8 
 
 ## disqus
-disqus_shortname: false
+disqus_shortname: allem40306
 
 google_plus:
 fb_admins:
