--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: cafe
 
 # abbrlink config
 abbrlink:
@@ -79,6 +79,6 @@ deploy:
   type: git
   repo: https://github.com/allem40306/blog.git
   branch: gh-pages
-  message: add a plugin "hexo addrlink" and revise 5 post(s)' tags
+  message: update on 2020-01-23 19:53
   name: allem40306
   email: allem40306@gmail.com
