--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "dependencies": {
     "braces": "^3.0.2",
     "ejs": "^2.6.2",
+    "eslint": "^6.8.0",
     "hexo": "^3.9.0",
     "hexo-abbrlink": "^2.0.5",
     "hexo-cli": "^2.0.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
-    "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^2.0.0",
