--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com/blog
+url: http://allem40306.github.io/blog
 root: /blog/
 permalink: posts/:abbrlink/
 permalink_defaults:
@@ -79,6 +79,6 @@ deploy:
   type: git
   repo: https://github.com/allem40306/blog.git
   branch: gh-pages
-  message: update on 2020-01-27 23:25
+  message: update on 2020-01-29 14:03
   name: allem40306
   email: allem40306@gmail.com
