--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,6 +1,6 @@
 FB粉專: https://www.facebook.com/allem40306codeblog/
 Chess Guo: https://blog.chesskuo.tk/
-HalloWorld: https://halloworld.tw/
+HalloWorld: https://blog.halloworldis.me/
 ICE JJ: https://blog.kiyohime.tw/about/
 r0ybloog: https://blog.roy4801.tw/
 SunTalk: https://blog.suntalk.tw/
