--- a/themes/cafe/_config.yml
+++ b/themes/cafe/_config.yml
@@ -30,7 +30,7 @@ wechat_url: http://blog.giscafer.com/static/images/qrcode_giscafer.jpg ## 启用
 links:
   FB粉專: https://www.facebook.com/allem40306codeblog/
   Chess Guo: https://blog.chesskuo.tw/
-  HalloWorld(暫時連不上): https://halloworld.tw/
+  HalloWorld: https://blog.halloworldis.me/
   ICE JJ: https://blog.kiyohime.tw/about/
   r0ybloog: https://blog.roy4801.tw/
   SunTalk: https://blog.suntalk.tw/
