--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   local-dir: public
   keep-history: false
   on:
