--- a/themes/cafe/_config.yml
+++ b/themes/cafe/_config.yml
@@ -3,7 +3,7 @@ menu:
   首頁: /
   文章列表: /archives
   # 关于: /about
-rss: /atom.xml
+rss: /blog/atom.xml
 
 # footer底部显示联系邮箱（在博客配置文件下添加email配置也是一样的效果）
 # email: 'youemail@outlook.com'
