--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,4 +5,4 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - before: ./init.sh # runs during prebuild
+  - command: ./init.sh # run on every start of a workspace
