--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,8 @@
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - command: ./init.sh # run on every start of a workspace
+    command: >
+    npm install &&
+    npm install -g hexo hexo-cli &&
+    chmod +x *.sh &&
+    export TZ='Asia/Taipei' && 
+    source ~/.bashrc
